unpackaged/main/default/objects/csmrgp__Case_Merge_Field_Editability_Settings__c/csmrgp__Case_Merge_Field_Editability_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines which primary case fields the user can modify on the Case Merge Premium merge page.</description>
    <label>Case Merge Field Editability Settings</label>
</CustomObject>