unpackaged/main/default/objects/csmrgp__Case_Merge_Field_Editability_Settings__c/fields/csmrgp__Editable__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, users can edit this field on the master case on the Case Merge Premium page.</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>