unpackaged/main/default/objects/csmrgp__Case_Merge_Field_Editability_Settings__c/fields/csmrgp__Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Field_Set_API_Name__c</fullName>
    <description>API Name of the field set</description>
    <label>Field Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>